--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upgrade in progess</title>
+	<link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Upgrade in progress!</h1>
-    <p>Contact us at <a href="mailto:grafanabim@gmail.com">grafanabim@gmail.com</a></p>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+          <h1>Upgrade in progress!</h1>
+    
+    </div>
+    <div class="col-md-6">
+      <p>Contact us at <a href="mailto:grafanabim@gmail.com">grafanabim@gmail.com</a></p>
+    </div>
+  </div>
+</div>
+
+
 </body>
 </html>
