--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-          <h1>Upgrade in progress!</h1>
+          <h1 class="fw-light">Upgrade in progress!</h1>
     </div>
     <div class="col-md-6">
-      <p>Contact us at <a href="mailto:grafanabim@gmail.com">grafanabim@gmail.com</a></p>
+      <p  class="fw-light fst-italic">Contact us at <a href="mailto:grafanabim@gmail.com">grafanabim@gmail.com</a></p>
     </div>
   </div>
 </div>
