--- a/index.html
+++ b/index.html
@@ -2,23 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upgrade in progess</title>
-	<link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0; url=../dms.html">
 </head>
 <body>
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-6">
-          <h1 class="fw-light">Upgrade in progress!</h1>
-    </div>
-    <div class="col-md-6">
-      <p  class="fw-light fst-italic">Contact us at <a href="mailto:grafanabim@gmail.com">grafanabim@gmail.com</a></p>
-    </div>
-  </div>
-</div>
-
-
+    <p>If you are not redirected automatically, follow this <a href="https://ccsanalytics.info/grafanabim.html">link</a>.</p>
 </body>
 </html>
