--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url=../dms.html">
+    <meta http-equiv="refresh" content="0; url=.https://ccsanalytics.info/grafanabim.html">
 </head>
 <body>
     <p>If you are not redirected automatically, follow this <a href="https://ccsanalytics.info/grafanabim.html">link</a>.</p>
